samples/_failures_safe/1761444841_aa5f5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_551c2f08.c: In function ‘main’:
./samples/SAFE/__tmp_551c2f08.c:146:12: error: missing terminating " character
  146 |     printf("
      |            ^
./samples/SAFE/__tmp_551c2f08.c:146:5: error: expected expression at end of input
  146 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_551c2f08.c:146:5: error: expected declaration or statement at end of input
